# Heroidle

./: .gitignore  MouseGetter.cpp  dummy_jsons.py  game.py  main.py  main_window.py  scenes_details.py  settings.py  test.txt
client/: main.py
events/: __init__.py  event_checker.py  event_maps.py  mouse.py  timer.py
gfx/: __init__.py  animation.py  click_action.py  detail.py  image.py  label.py  scene.py  scene_dict.py  scene_maker.py  scenes_details.py  text_manager.py
pyclick/: __init__.py  game_window.py
pyclick/controls/: mouse.py  timer.py
pyclick/events/: event_maps.py  mouse.py  timer.py
pyclick/gfx/: abstract_scene.py  animation.py  complex_scene.py  detail.py  image.py  label.py  scene_dict.py  scene_maker.py  scrollable.py  simple_scene.py  text_manager.py
pyclick/tst/: test_animation.py  test_complex_scene.py  test_detail.py  test_image.py  test_label.py  test_simple_scenee.py
pyclick/utils/: __init__.py  annotation.py  (+1 more)
server/: CMakeLists.txt  conan.cmake  conanfile.txt  main.cpp  main.py  player.py  resource.hpp  timer.hpp
server/src/: CMakeLists.txt  calculator.hpp  kingdom.hpp  main.cpp  msgBroker.hpp  player.hpp  resource.hpp  server.cpp  server.hpp  warehouse.hpp
server/ut/: CMakeLists.txt  test_player.cpp  test_poc.cpp  test_server.cpp
showcase/: click_action.py  main.py  scenes.py  your_game.py
tst/: test_animation.py  test_detail.py  test_image.py  test_label.py  test_scene.py  test_scene_dict.py
utils/: __init__.py  color_constants.py  png_image.py  static_class.py
wrapg/: __init__.py  events.py  graphics.py
(+2 files in other folders)
